# MASTERCONTROL

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mastercontrol.desktop  mastercontrol.sh  start.sh
.mastercontrol/: manifest.yaml
app/static/: app.js  hex-grid.js  panels.js  resize.js  style.css  utils.js
app/templates/: index.html
backend/: pyproject.toml
backend/src/: cli.py  config.py  main.py  process_registry.py
backend/src/agents/: context.py  coordinator.py
backend/src/db/: database.py  models.py
backend/src/routers/: agents.py  projects.py  system.py  tasks.py
backend/src/services/: memory_service.py  project_scanner.py  scaffold_service.py  session_service.py  window_manager.py
scripts/: install-desktop.sh
