[project]
name = "master-control"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.0",
    "watchfiles>=1.0",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "aiofiles>=24.1",
    "python-dotenv>=1.0",
    "click>=8.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
masterctl = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
